# g3

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  INDEXING_DEMO_GUIDE.md  INTELLIGENCE_DEMO_OUTPUT.md  README.md  config.example.toml  liblru_cache.rlib  lru_cache.rs  qwen_test.txt
.beads/: issues.jsonl
.beads/formulas/: codebase-index.toml  codebase-query.toml  graph-maintenance.toml
.claude/data/sessions/: 00b2a7d6-ef25-48f3-b631-f27c2e096c7b.json  016040c7-dcc3-4514-9119-ddbd986db444.json  027a3241-95f9-4ca0-bfff-bc3336aaa94c.json  0b5926eb-4425-4f22-be9e-04fd568b44be.json  0cb1c73d-5304-4fac-9956-b952bd529c4f.json  0dabed92-5985-423c-9b48-4a001d860954.json  0e71ded3-9974-402d-8276-30e3fa8a80ee.json  113ff21d-cb74-47e4-abcd-4e1cdcaf7829.json  1619fb6b-ca86-42d4-bb9b-36447dc9dff7.json  167af253-9bfb-4809-b2dc-f2ecd1ad9143.json  17722693-67a1-40bc-b1ce-81c4b614624b.json  1945d2fb-9414-40f1-bee0-ff4a46217a2f.json  1a08c9f6-1adb-46f1-9881-8a5e5c1953a5.json  1af0307f-9f4c-4e48-ae4d-f403d6cbde6c.json  200aa667-4fa2-4f8f-b44c-4b6b0dfac5f6.json  209a25d5-496e-4754-a337-7914e90e078a.json  260bd9df-d438-4b14-86c7-1f39444a945e.json  2be3e219-80f1-4e3c-a249-3a1f93750451.json  30da1cbf-e528-413e-a6f1-81db8a605faf.json  339380c4-7226-42b5-8252-7381cf58e56e.json  3a9ffa73-2850-49c5-9754-271b6f652821.json  3b4bb95c-eba9-4da9-bdd2-b30b5ba8237f.json  3f762822-ded0-4301-942c-eaaf50e7822b.json  41a2b27a-323b-4446-9d12-bc27209d8859.json  44334bb4-5f55-44f0-9e62-71a7a3ba2c38.json  451f3c09-7d03-43bc-802d-e615d99f5e1c.json  4759f1e9-748f-4242-be9a-d30061f18e5c.json  4a07bd34-681a-44d3-83cc-37df3424b9f2.json  4cff65f2-dc30-4d1d-8dca-fcd81ede98d2.json  4dd60b07-9d73-49df-8685-c91f5b10bec7.json  4ffc7b97-6848-4a8b-b175-57df6632dab3.json  50e83ebf-4bed-44d2-8930-67a3a3163ece.json  516d1030-bbd5-4515-b9ed-1fc4e4df3035.json  531d374f-eb12-4a51-aad6-22233be696eb.json  5381d66f-f85a-4df0-ae8d-2dcdc3906657.json  5d2dc60b-ad3c-4149-8204-c5f650febf02.json  5e0d1b76-ef4e-40d3-861f-c7840abc9f53.json  6208ffc2-b68b-4745-951f-6cc7eb47b81f.json  66174361-3441-4824-8a0f-8231b0b7da8f.json  684e34b0-2410-47aa-a475-c9951e37354a.json  (+60 more)
.g3-index/: manifest.json
.g3-index/graph/: file_index.json
agents/: codebase-scout.md  scout.md
analysis/: memory.md
crates/fibonacci/examples/: example.rs
crates/fibonacci/src/: fibonacci.rs
crates/g3-cli/: Cargo.toml
crates/g3-cli/src/: accumulative.rs  agent_mode.rs  autonomous.rs  cli_args.rs  commands.rs  dytopo.rs  embedded_agents.rs  fibonacci.rs  input_formatter.rs  interactive.rs  lib.rs  lib.rs.bak  utils.rs  (+3 more)
crates/g3-config/: Cargo.toml
crates/g3-core/: Cargo.toml
crates/g3-ensembles/: Cargo.toml
crates/g3-ensembles/src/: flock.rs  lib.rs
crates/g3-ensembles/src/communication/: channel.rs  mod.rs
crates/g3-ensembles/src/dytopo/: channel_ui_writer.rs  coordinator.rs  descriptor.rs  manager.rs  message.rs  mod.rs  topology.rs  worker.rs
crates/g3-ensembles/src/workflow/: approval.rs  builder.rs  checkpoint.rs  condition.rs  dag.rs  executor.rs  mod.rs  node.rs  state.rs  visualize.rs
crates/g3-index/: Cargo.toml
crates/g3-index/src/: chunker.rs  graph.rs  graph_builder.rs  indexer.rs  integration.rs  lib.rs  manifest.rs  qdrant.rs  reranker.rs  storage.rs  traverser.rs  unified_index.rs  watcher.rs
crates/g3-index/src/embeddings/: mod.rs
crates/g3-index/src/search/: bm25.rs  mod.rs
crates/g3-index/tests/: integration_test.rs
crates/g3-lsp/: Cargo.toml
crates/g3-lsp/src/: client.rs  discovery.rs  lib.rs  lifecycle.rs  manager.rs  transport.rs  types.rs
docs/: INTELLIGENCE.md  INTELLIGENCE_DEMO.md  state_machines.mermaid  tools.md
examples/: demo_intelligence.rs  provider_benchmark.rs  verify_message_id.rs  zai_demo.rs
logs/: notification.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  status_line.json  stop.json  subagent_stop.json  user_prompt_submit.json
scripts/: run-integration-tests.sh
specs/: codebase-intelligence-system.md  zai-provider-config-demo-benchmark.md
src/: main.rs
(+97 files in other folders)
