[workspace]
members = [
    "crates/g3-cli",
    "crates/g3-core",
    "crates/playground",
    "crates/g3-planner",
    "crates/g3-providers",
    "crates/g3-config",
    "crates/g3-execution",
    "crates/g3-computer-control",
    "crates/g3-index",
    "crates/g3-lsp",
    "crates/studio",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI
clap = { version = "4.0", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
config = "0.14"
# Utilities
uuid = { version = "1.0", features = ["v4"] }

[package]
name = "g3"
version = "0.1.0"
edition = "2021"
authors = ["g3 Team"]
description = "A general purpose AI agent that helps you complete tasks by writing code"
license = "MIT"

[dependencies]
g3-cli = { path = "crates/g3-cli" }
g3-index = { path = "crates/g3-index" }
tokio = { workspace = true }
anyhow = { workspace = true }
g3-providers = { path = "crates/g3-providers" }
serde_json = { workspace = true }
tokio-stream = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tempfile = "3.8"

[[example]]
name = "verify_message_id"
path = "examples/verify_message_id.rs"

[[example]]
name = "zai_demo"
path = "examples/zai_demo.rs"

[[example]]
name = "provider_benchmark"
path = "examples/provider_benchmark.rs"

[[example]]
name = "demo_intelligence"
path = "examples/demo_intelligence.rs"
