[package]
name = "g3-index"
version = "0.1.0"
edition = "2021"
description = "Codebase indexing and semantic search for G3 AI agent"

[dependencies]
# Vector database
qdrant-client = "1"

# Tree-sitter (for AST parsing - reuse patterns from g3-core)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Async runtime
tokio = { workspace = true }

# HTTP client for embedding APIs
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# File watching
notify = "6"

# Gitignore support
ignore = "0.4"

# Utilities
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
